# rumpose

./: Cargo.toml  README.md  rustfmt.toml
crates/components/: Cargo.toml
crates/components/src/: container.rs  lib.rs  text.rs
crates/components/src/modifier/: combined.rs  content.rs  draw.rs  mod.rs  padding.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/components/: layout.rs  mod.rs  render.rs
crates/core/src/node/: measure.rs  measure_compose.rs  mod.rs  render.rs
crates/core/src/phase/: measure.rs  measure_compose.rs  mod.rs  render.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: lib.rs
crates/graphics/: Cargo.toml
crates/graphics/src/: lib.rs
crates/layout/: Cargo.toml
crates/layout/src/: lib.rs
crates/rumpose/: Cargo.toml
crates/rumpose/src/: lib.rs
examples/: basic.rs  basic_subcompose.rs  lazy_list.rs
